--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@ footer {
     color: var(--tertiary);
     padding: 10px;
     text-align: center;
-    font-size: 10px;
     position: relative;
     z-index: 1;
     margin-top: 30px;
@@ -90,6 +89,14 @@ footer {
     /* Simplify box-shadow */
     box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1),
     0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.footer_text_h3 {
+    font-size: 16px;
+}
+
+.footer_text_p {
+    font-size: 10px;
 }
 
 /* Common styles for iframe wrappers */
