--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,18 @@ header {
     z-index: 1;
 }
 
-h1, h2 {
+h1 {
     font-size: 36px;
     margin-top: 30px;
     font-weight: bold;
+    color: var(--secondary);
+}
+
+h3 {
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: bold;
+    color: var(--primary);
 }
 
 iframe {
