--- a/src/App.css
+++ b/src/App.css
@@ -64,11 +64,18 @@ h1 {
     color: var(--secondary);
 }
 
-h3 {
-    font-size: 24px;
+h2 {
+    font-size: 30px;
     margin-top: 20px;
     font-weight: bold;
     color: var(--primary);
+}
+
+h3 {
+    font-size: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+    color: var(--tertiary);
 }
 
 iframe {
