--- a/src/App.css
+++ b/src/App.css
@@ -221,11 +221,11 @@ iframe {
 }
 
 .serverBtn:active {
-    background-color: var(--tertiary);
+    background-color: var(--primary);
 }
 
 .serverBtn:hover {
-    background-color: var(--tertiary);
+    background-color: var(--primary);
 }
 
 @media screen and (max-width: 768px) {
