--- a/src/App.css
+++ b/src/App.css
@@ -93,10 +93,36 @@ h1, h2, h3 {
     margin-bottom: 20px;
 }
 
+.video-player-header-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
 iframe {
     display: block;
     border: none;
     box-shadow: 0 0 10px rgba(200, 200, 200, 0.8);
+}
+
+.greeting {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin: 0;
+    color: #9c9c9c;
+}
+
+.video-players-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
+    margin: 0;
 }
 
 .twitch-iframe, .youtube-iframe {
